// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SendOnEnterMenu on click unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-send-on-enter-menu"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori--conversation-button"
      id="base-ui-:r4:"
      tabindex="0"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <span
          style="display: block; width: 1rem; height: 1rem;"
        >
          …
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders SendOnEnterMenu on keypress unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-send-on-enter-menu"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="memori-dropdown__trigger memori-button memori-button--circle memori-button--icon-only memori-share-button--button memori--conversation-button"
      id="base-ui-:ra:"
      tabindex="0"
      type="button"
    >
      <div
        class="memori-button--icon"
      >
        <span
          style="display: block; width: 1rem; height: 1rem;"
        >
          …
        </span>
      </div>
    </button>
  </div>
</div>
`;
